@@ -14,13 +14,25 @@ describe Administrate::Generators::DashboardGenerator, :generator do
 
     describe "#attribute_types" do
       it "includes standard model attributes" do
-        dashboard = file("app/dashboards/customer_dashboard.rb")
+        begin
+          ActiveRecord::Schema.define do
+            create_table(:foos) { |t| t.timestamps null: false }
+          end
 
-        run_generator ["customer"]
+          class Foo < ActiveRecord::Base
+            reset_column_information
+          end
 
-        expect(dashboard).to contain("id: Field::String,")
-        expect(dashboard).to contain("created_at: Field::String,")
-        expect(dashboard).to contain("updated_at: Field::String,")
+          run_generator ["foo"]
+          load file("app/dashboards/foo_dashboard.rb")
+          attrs = FooDashboard::ATTRIBUTE_TYPES
+
+          expect(attrs[:id]).to eq(Administrate::Field::Number)
+          expect(attrs[:created_at]).to eq(Administrate::Field::String)
+          expect(attrs[:updated_at]).to eq(Administrate::Field::String)
+        ensure
+          remove_constants :Foo, :FooDashboard
+        end
       end
 
       it "includes user-defined database columns" do
@@ -42,6 +54,7 @@ describe Administrate::Generators::DashboardGenerator, :generator do
 
       it "looks for class_name options on has_many fields" do
         class Customer < ActiveRecord::Base
+          reset_column_information
           has_many :purchases, class_name: "Order", foreign_key: "purchase_id"
         end
         dashboard = file("app/dashboards/customer_dashboard.rb")
@@ -51,6 +64,30 @@ describe Administrate::Generators::DashboardGenerator, :generator do
         expect(dashboard).to contain(
           'purchases: Field::HasMany.with_options(class_name: "Order")',
         )
+      end
+
+      it "assigns numeric fields a type of `Number`" do
+        begin
+          ActiveRecord::Schema.define do
+            create_table :inventory_items do |t|
+              t.integer :quantity
+              t.float :price
+            end
+          end
+
+          class InventoryItem < ActiveRecord::Base
+            reset_column_information
+          end
+
+          run_generator ["inventory_item"]
+          load file("app/dashboards/inventory_item_dashboard.rb")
+          attrs = InventoryItemDashboard::ATTRIBUTE_TYPES
+
+          expect(attrs[:quantity]).to eq(Administrate::Field::Number)
+          expect(attrs[:price]).to eq(Administrate::Field::Number)
+        ensure
+          remove_constants :InventoryItem, :InventoryItemDashboard
+        end
       end
 
       it "determines a class_name from `through` and `source` options" do
@@ -67,6 +104,7 @@ describe Administrate::Generators::DashboardGenerator, :generator do
           end
 
           class Concert < ActiveRecord::Base
+            reset_column_information
             has_many :tickets
             has_many :attendees, through: :tickets, source: :person
             has_many :venues, through: :tickets
@@ -74,6 +112,7 @@ describe Administrate::Generators::DashboardGenerator, :generator do
           end
 
           class Ticket < ActiveRecord::Base
+            reset_column_information
             belongs_to :concert
             belongs_to :person
             belongs_to :venue
@@ -81,7 +120,9 @@ describe Administrate::Generators::DashboardGenerator, :generator do
           end
 
           class Number; end
-          class Person < ActiveRecord::Base; end
+          class Person < ActiveRecord::Base
+            reset_column_information
+          end
 
           dashboard = file("app/dashboards/concert_dashboard.rb")
 
@@ -116,10 +157,12 @@ describe Administrate::Generators::DashboardGenerator, :generator do
           end
 
           class Account < ActiveRecord::Base
+            reset_column_information
             has_one :profile
           end
 
           class Ticket < ActiveRecord::Base
+            reset_column_information
             belongs_to :account
           end
 
@@ -142,7 +185,10 @@ describe Administrate::Generators::DashboardGenerator, :generator do
               %i(a b c d e f g).each { |attr| t.string attr }
             end
           end
-          class Foo < ActiveRecord::Base; end
+
+          class Foo < ActiveRecord::Base
+            reset_column_information
+          end
 
           run_generator ["foo"]
           load file("app/dashboards/foo_dashboard.rb")
